[package]
name = "ferry"
version = "0.0.2"
authors = ["Jay Nagpaul <hi@jaynagpaul.com>"]
description = "Ferry provides simple user authentication for Rust."
readme = "README.md"
keywords = ["web", "authentication", "security"]
categories = ["authentication", "web-programming"]
license = "MIT"
repository = "https://github.com/jaynagpaul/ferry"

exclude = [".gitignore"]

[dependencies]
chrono = {version = "0.4.5", features = ["serde"]}
serde_json = "1.0.24"
serde_derive = "1.0.70"
serde = "1.0.70"
failure = "0.1.1"
oauth2 = "1.3.0"